[package]
name = "built-different"
version = "0.1.0"
authors = ["KemoshCode <kemosh@live.com>"]
description = "A little fish tank sim"
license = "MIT/Apache-2.0"
repository = "https://github.com/KemoshCode/Built-Different"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
