[package]
name = "built-different"
version = "0.1.0"
authors = ["KemoshCode <kemosh@live.com>"]
description = "A Physics Based Game"
license = "MIT/Apache-2.0"
repository = "https://github.com/KemoshCode/Built-Different"
edition = "2018"

[lib]
name = "built_different_lib"
path = "src/lib.rs"

[[bin]]
name = "built_different"
path = "src/bin/main.rs"

[dependencies]
rand = "0.8.5"
image = "0.24.6"
